--- a/Book/project-folder/index.html
+++ b/Book/project-folder/index.html
@@ -8,7 +8,22 @@
     <body>
         <script type="text/javascript">
             // Your beautiful D3 code will go here
-            d3.select("body").append("p").text("New paragraph!");
+            //d3.select("body").append("p").text("New paragraph!");
+            var dataset = [5,10,15,20,25];
+            d3.select("body").selectAll("p")
+                .data(dataset)
+                .enter()
+                .append("p")
+                //.text("New paragraph!")
+                //.text(function(d){return d*d;})
+                .text(function(d){return "The square of " + d + " is " + d*d;})
+                .style("color", function(d) {
+                    if (d > 15) {   //Threshold of 15
+                        return "red";
+                    } else {
+                        return "black";
+                    }
+                });
         </script>
     </body>
 </html>     
